--- a/.github/workflows/version_bump.yml
+++ b/.github/workflows/version_bump.yml
@@ -39,6 +39,10 @@ jobs:
       with:
         fetch-depth: 0
 
+    - name: Set repo file permissions
+      run: |
+        chown -R $USER:$USER .git/objects
+
     - name: Set up Python
       uses: actions/setup-python@v4.3.1
       with:
