--- a/cookiecutter/target-template/{{cookiecutter.target_id}}/pyproject.toml
+++ b/cookiecutter/target-template/{{cookiecutter.target_id}}/pyproject.toml
@@ -11,9 +11,11 @@ license = "Apache 2.0"
 
 [tool.poetry.dependencies]
 python = "<3.12,>=3.7.1"
-requests = "^2.28.1"
 singer-sdk = { version="^0.18.0"}
 fs-s3fs = { version = "^1.1.1", optional = true}
+{%- if cookiecutter.serialization_method != "SQL" %}
+requests = "^2.28.1"
+{%- endif %}
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.2.0"
@@ -22,8 +24,10 @@ flake8 = "^3.9.2"
 black = "^22.12.0"
 pydocstyle = "^6.2.1"
 mypy = "^0.991"
-types-requests = "^2.28.11.7"
 isort = "^5.11.4"
+{%- if cookiecutter.serialization_method != "SQL" %}
+types-requests = "^2.28.11.7"
+{%- endif %}
 
 [tool.poetry.extras]
 s3 = ["fs-s3fs"]
