--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,11 +69,11 @@ myst-parser = {version = ">=0.17.2,<0.19.0", optional = true}
 sphinx-autobuild = {version = "^2021.3.14", optional = true}
 
 # File storage dependencies installed as optional 'filesystem' extras
-fs-s3fs = { version = "^1.1.1", optional = true}
+fs-s3fs = {version = "^1.1.1", optional = true}
 
 # Testing dependencies installed as optional 'testing' extras
-pytest = "^7.2.0"
-pytest-durations = {version = "^1.2.0"}
+pytest = {version="^7.2.1", optional = true}
+pytest-durations = {version = "^1.2.0", optional = true}
 
 [tool.poetry.extras]
 docs = [
@@ -99,7 +99,6 @@ testing = [
 [tool.poetry.dev-dependencies]
 # snowflake-connector-python = "2.0.4" # Removed: Too many version conflicts!
 commitizen-version-bump = { git = "https://github.com/meltano/commitizen-version-bump.git", branch = "main" }
-pytest = "^7.2.1"
 xdoctest = "^1.1.0"
 mypy = "^0.991"
 cookiecutter = "^2.1.1"
