--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,6 +67,7 @@ sphinx-rtd-theme = {version = ">=0.5.2,<1.2.0", optional = true}
 sphinx-copybutton = {version = ">=0.3.1,<0.6.0", optional = true}
 myst-parser = {version = ">=0.17.2,<0.19.0", optional = true}
 sphinx-autobuild = {version = "^2021.3.14", optional = true}
+sphinx-reredirects = {version = "^0.1.1", optional = true}
 
 # File storage dependencies installed as optional 'filesystem' extras
 fs-s3fs = { version = "^1.1.1", optional = true}
@@ -78,6 +79,7 @@ docs = [
     "sphinx-copybutton",
     "myst-parser",
     "sphinx-autobuild",
+    "sphinx_reredirects",
 ]
 s3 = ["fs-s3fs"]
 # Mark these as extras so that installs pass on python 3.11
