--- a/cookiecutter/target-template/{{cookiecutter.target_id}}/pyproject.toml
+++ b/cookiecutter/target-template/{{cookiecutter.target_id}}/pyproject.toml
@@ -1,13 +1,23 @@
 [tool.poetry]
+{%- if cookiecutter.variant != "None (Skip)" %}
+name = "{{cookiecutter.variant}}-{{cookiecutter.target_id}}"
+{%- else %}
 name = "{{cookiecutter.target_id}}"
+{%- endif %}
 version = "0.0.1"
 description = "`{{cookiecutter.target_id}}` is a Singer target for {{cookiecutter.destination_name}}, built with the Meltano Singer SDK."
+readme = "README.md"
 authors = ["{{ cookiecutter.admin_name }}"]
 keywords = [
     "ELT",
     "{{cookiecutter.destination_name}}",
 ]
 license = "Apache 2.0"
+{%- if cookiecutter.variant != "None (Skip)" %}
+packages = [
+    { include = "{{cookiecutter.library_name}}" },
+]
+{%- endif %}
 
 [tool.poetry.dependencies]
 python = "<3.12,>=3.7.1"
