--- a/cookiecutter/tap-template/{{cookiecutter.tap_id}}/pyproject.toml
+++ b/cookiecutter/tap-template/{{cookiecutter.tap_id}}/pyproject.toml
@@ -26,12 +26,16 @@ fs-s3fs = { version = "^1.1.1", optional = true}
 {%- if cookiecutter.stream_type in ["REST", "GraphQL"] %}
 requests = "^2.28.2"
 {%- endif %}
+{%- if cookiecutter.auth_method in ("OAuth2", "JWT") %}
+cached-property = "^1" # Remove after Python 3.7 support is dropped
+{%- endif %}
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.1"
 flake8 = "^5.0.4"
+darglint = "^1.8.1"
 black = "^23.1.0"
-pydocstyle = "^6.3.0"
+pyupgrade = "^3.3.1"
 mypy = "^1.0.0"
 isort = "^5.11.5"
 {%- if cookiecutter.stream_type in ["REST", "GraphQL"] %}
@@ -45,6 +49,10 @@ s3 = ["fs-s3fs"]
 profile = "black"
 multi_line_output = 3 # Vertical Hanging Indent
 src_paths = "{{cookiecutter.library_name}}"
+
+[tool.mypy]
+python_version = "3.9"
+warn_unused_configs = true
 
 [build-system]
 requires = ["poetry-core>=1.0.8"]
