--- a/cookiecutter/tap-template/{{cookiecutter.tap_id}}/tox.ini
+++ b/cookiecutter/tap-template/{{cookiecutter.tap_id}}/tox.ini
@@ -40,11 +40,11 @@ commands =
     poetry run black --check --diff {{cookiecutter.library_name}}/
     poetry run isort --check {{cookiecutter.library_name}}
     poetry run flake8 {{cookiecutter.library_name}}
-    poetry run pydocstyle {{cookiecutter.library_name}}
     # refer to mypy.ini for specific settings
     poetry run mypy {{cookiecutter.library_name}} --exclude='{{cookiecutter.library_name}}/tests'
 
 [flake8]
+docstring-convention = google
 ignore = W503
 max-line-length = 88
 max-complexity = 10
