update test matrix in github action

--- a/.github/workflows/cookiecutter-e2e.yml
+++ b/.github/workflows/cookiecutter-e2e.yml
@@ -1,6 +1,9 @@
 name: E2E Cookiecutters
 
 on:
+  pull_request:
+    types: [opened, synchronize, reopened]
+    paths: ["cookiecutter/**", "e2e-tests/cookiecutters/**"]
   push:
     branches: [main]
     paths: ["cookiecutter/**", "e2e-tests/cookiecutters/**"]
@@ -21,9 +24,14 @@ jobs:
       fail-fast: true
       matrix:
         include:
-          - { cookiecutter: "tap-template", replay: "tap-rest-api_key-github.json", python-version: "3.9",  os: "ubuntu-latest" }
           - { cookiecutter: "tap-template", replay: "tap-graphql-jwt.json", python-version: "3.9",  os: "ubuntu-latest" }
-          - { cookiecutter: "target-template", replay: "target-per_record.json", python-version: "3.9",  os: "ubuntu-latest" }
+          - { cookiecutter: "tap-template", replay: "tap-rest-api_key-github.json", python-version: "3.9",  os: "ubuntu-latest" }
+          - { cookiecutter: "tap-template", replay: "tap-rest-basic_auth.json", python-version: "3.9",  os: "ubuntu-latest" }
+          - { cookiecutter: "tap-template", replay: "tap-rest-bearer_token.json", python-version: "3.9",  os: "ubuntu-latest" }
+          - { cookiecutter: "tap-template", replay: "tap-rest-custom.json", python-version: "3.9",  os: "ubuntu-latest" }
+          - { cookiecutter: "tap-template", replay: "tap-rest-jwt.json", python-version: "3.9",  os: "ubuntu-latest" }
+          - { cookiecutter: "tap-template", replay: "tap-rest-oauth2.json", python-version: "3.9",  os: "ubuntu-latest" }
+          - { cookiecutter: "tap-template", replay: "target-per_record.json", python-version: "3.9",  os: "ubuntu-latest" }
 
     steps:
     - name: Check out the repository
