--- a/.github/workflows/cookiecutter-e2e.yml
+++ b/.github/workflows/cookiecutter-e2e.yml
@@ -31,7 +31,7 @@ jobs:
           - { cookiecutter: "tap-template", replay: "tap-rest-custom.json", python-version: "3.9",  os: "ubuntu-latest" }
           - { cookiecutter: "tap-template", replay: "tap-rest-jwt.json", python-version: "3.9",  os: "ubuntu-latest" }
           - { cookiecutter: "tap-template", replay: "tap-rest-oauth2.json", python-version: "3.9",  os: "ubuntu-latest" }
-          - { cookiecutter: "tap-template", replay: "target-per_record.json", python-version: "3.9",  os: "ubuntu-latest" }
+          - { cookiecutter: "target-template", replay: "target-per_record.json", python-version: "3.9",  os: "ubuntu-latest" }
 
     steps:
     - name: Check out the repository
@@ -63,7 +63,8 @@ jobs:
         CC_TEMPLATE: cookiecutter/${{ matrix.cookiecutter }}
         REPLAY_FILE: e2e-tests/cookiecutters/${{ matrix.replay }}
       run: |
-        bash e2e-tests/cookiecutters/test_cookiecutter.sh $CC_TEMPLATE $REPLAY_FILE 0
+        chmod +x ./e2e-tests/cookiecutters/test_cookiecutter.sh
+        ./e2e-tests/cookiecutters/test_cookiecutter.sh $CC_TEMPLATE $REPLAY_FILE 0
 
     - uses: actions/upload-artifact@v3
       with:
