--- a/pyproject.toml
+++ b/pyproject.toml
@@ -87,6 +87,9 @@ docs = [
 ]
 s3 = ["fs-s3fs"]
 # Mark these as extras so that installs pass on python 3.11
+samples = [
+    "pyarrow",
+]
 debugging = [
     "viztracer",
 ]
@@ -102,7 +105,7 @@ xdoctest = "^1.1.1"
 mypy = "^1.0"
 cookiecutter = "^2.1.1"
 PyYAML = "^6.0"
-pyarrow = "^11.0.0"
+pyarrow = {version = "^11.0.0", optional = true, python = "<3.11"}
 freezegun = "^1.2.2"
 viztracer = {version = "^0.15.6", optional = true, python = "<3.11"}
 requests-mock = "^1.10.0"
