--- a/pyproject.toml
+++ b/pyproject.toml
@@ -108,7 +108,7 @@ types-requests = "^2.28.11"
 types-simplejson = "^3.18.0"
 types-PyYAML = "^6.0.12"
 coverage = {extras = ["toml"], version = "^7.2"}
-pyarrow = {version = "^11.0.0", python = "<3.11"}
+pyarrow = "^11.0.0"
 pytest-snapshot = "^0.9.0"
 
 # Cookiecutter tests
