--- a/pyproject.toml
+++ b/pyproject.toml
@@ -86,13 +86,6 @@ docs = [
     "sphinx_reredirects",
 ]
 s3 = ["fs-s3fs"]
-# Mark these as extras so that installs pass on python 3.11
-samples = [
-    "pyarrow",
-]
-debugging = [
-    "viztracer",
-]
 testing = [
     "pytest",
     "pytest-durations"
@@ -105,9 +98,11 @@ xdoctest = "^1.1.1"
 mypy = "^1.0"
 cookiecutter = "^2.1.1"
 PyYAML = "^6.0"
-pyarrow = {version = "^11.0.0", optional = true, python = "<3.11"}
 freezegun = "^1.2.2"
-viztracer = {version = "^0.15.6", optional = true, python = "<3.11"}
+numpy = [
+    { version = "<1.22", python = "<3.8" },
+    { version = ">=1.22", python = ">=3.8" },
+]
 requests-mock = "^1.10.0"
 sqlalchemy2-stubs = {version = "^0.0.2a32", allow-prereleases = true}
 types-jsonschema = "^4.17.0.6"
@@ -117,6 +112,7 @@ types-requests = "^2.28.11"
 types-simplejson = "^3.18.0"
 types-PyYAML = "^6.0.12"
 coverage = {extras = ["toml"], version = "^7.2"}
+pyarrow = "^11.0.0"
 pytest-snapshot = "^0.9.0"
 
 # Cookiecutter tests
