--- a/pyproject.toml
+++ b/pyproject.toml
@@ -230,6 +230,7 @@ select = [
     "ANN",  # flake8-annotations
     "COM",  # flake8-commas
     "T10",  # flake8-debugger
+    "ISC",  # flake8-implicit-str-concat
     "ICN",  # flake8-import-conventions
     "PIE",  # flake8-pie
     "PT",   # flake8-pytest-style
