chore: Enable `INP` Ruff checks
<h2>Rationale</h2>

<p>Implicit namespace packages are directories of Python files without an <code>__init__.py</code>.
    They’re valid and importable, but they break <em>many</em> tools, such as:</p>

<ul>
    <li><p><a href="https://bugs.python.org/issue23882" rel="nofollow">unittest test discovery</a> (and by extension, Django’s test runner)</p></li>
    <li><p><a href="https://github.com/nedbat/coveragepy/issues/1024" rel="nofollow">Coverage.py</a></p></li>
    <li><p>Mypy without its <a href="https://mypy.readthedocs.io/en/latest/command_line.html#import-discovery" rel="nofollow">–namespace-packages option</a></p></li>
    <li><p><a href="https://github.com/pytest-dev/pytest/issues/5147" rel="nofollow">pytest</a></p></li>
</ul>

https://pypi.org/project/flake8-no-pep420/

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -232,6 +232,7 @@ select = [
     "T10",  # flake8-debugger
     "ISC",  # flake8-implicit-str-concat
     "ICN",  # flake8-import-conventions
+    "INP",  # flake8-no-pep420
     "PIE",  # flake8-pie
     "PT",   # flake8-pytest-style
 ]
@@ -239,7 +240,11 @@ src = ["samples", "singer_sdk", "tests"]
 target-version = "py37"
 
 [tool.ruff.per-file-ignores]
-"docs/conf.py" = ["D", "I002"]
+"docs/conf.py" = [
+    "D",      # pydocstyle/flake8-docstrings
+    "I002",   # isort: missing-required-import
+    "INP001", # flake8-no-pep420: implicit-namespace-package
+]
 "noxfile.py" = ["ANN"]
 "tests/*" = ["ANN", "D1", "D2"]
 # Disabled some checks in samples code
