chore: Enable `T20` Ruff checks
Usage of `print`

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -234,6 +234,7 @@ select = [
     "ICN",  # flake8-import-conventions
     "INP",  # flake8-no-pep420
     "PIE",  # flake8-pie
+    "T20",  # flake8-print
     "PT",   # flake8-pytest-style
     "RSE",  # flake8-raise
     "RET",  # flake8-return
