chore: Enable `RSE` Ruff checks

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -235,6 +235,7 @@ select = [
     "INP",  # flake8-no-pep420
     "PIE",  # flake8-pie
     "PT",   # flake8-pytest-style
+    "RSE",  # flake8-raise
 ]
 src = ["samples", "singer_sdk", "tests"]
 target-version = "py37"
