--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,7 @@ inflection = "^0.5.1"
 sqlalchemy = "^1.4"
 python-dotenv = ">=0.20,<0.22"
 typing-extensions = "^4.2.0"
+simpleeval = "^0.9.13"
 simplejson = "^3.17.6"
 jsonschema = "^4.16.0"
 pytz = "^2022.2.1"
