chore: Enable `ARG` Ruff checks

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -240,6 +240,7 @@ select = [
     "RET",  # flake8-return
     "SIM",  # flake8-simplify
     "TCH",  # flake8-type-checking
+    "ARG",  # flake8-unused-arguments
 ]
 src = ["samples", "singer_sdk", "tests"]
 target-version = "py37"
