chore: Enable `PTH` Ruff checks

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -241,6 +241,7 @@ select = [
     "SIM",  # flake8-simplify
     "TCH",  # flake8-type-checking
     "ARG",  # flake8-unused-arguments
+    "PTH",  # flake8-use-pathlib
 ]
 src = ["samples", "singer_sdk", "tests"]
 target-version = "py37"
