--- a/pyproject.toml
+++ b/pyproject.toml
@@ -229,6 +229,7 @@ select = [
     "YTT",  # flake8-2020
     "ANN",  # flake8-annotations
     "COM",  # flake8-commas
+    "C4",   # flake8-comprehensions
     "T10",  # flake8-debugger
     "ISC",  # flake8-implicit-str-concat
     "ICN",  # flake8-import-conventions
