--- a/pyproject.toml
+++ b/pyproject.toml
@@ -229,6 +229,7 @@ select = [
     "UP",   # pyupgrade
     "YTT",  # flake8-2020
     "ANN",  # flake8-annotations
+    "BLE",  # flake8-blind-except
     "COM",  # flake8-commas
     "C4",   # flake8-comprehensions
     "T10",  # flake8-debugger
