--- a/pyproject.toml
+++ b/pyproject.toml
@@ -230,6 +230,7 @@ select = [
     "YTT",  # flake8-2020
     "ANN",  # flake8-annotations
     "BLE",  # flake8-blind-except
+    "B",    # flake8-bugbear
     "COM",  # flake8-commas
     "C4",   # flake8-comprehensions
     "T10",  # flake8-debugger
