--- a/pyproject.toml
+++ b/pyproject.toml
@@ -231,6 +231,7 @@ select = [
     "ANN",  # flake8-annotations
     "BLE",  # flake8-blind-except
     "B",    # flake8-bugbear
+    "A",    # flake8-builtins
     "COM",  # flake8-commas
     "C4",   # flake8-comprehensions
     "T10",  # flake8-debugger
