Make the max function args 9

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -295,3 +295,6 @@ required-imports = ["from __future__ import annotations"]
 
 [tool.ruff.pydocstyle]
 convention = "google"
+
+[tool.ruff.pylint]
+max-args = 9
