chore: Enable `PLC`, `PLE`, `PLR` and `PLW` Ruff checks (#1569)
* chore: Enable `PLC`, `PLE`, `PLR` and `PLW` Ruff checks

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -255,6 +255,10 @@ select = [
     "PTH",  # flake8-use-pathlib
     "ERA",  # eradicate
     "PGH",  # pygrep-hooks
+    "PLC",  # pylint (convention)
+    "PLE",  # pylint (error)
+    "PLR",  # pylint (refactor)
+    "PLW",  # pylint (warning)
     "RUF",  # ruff
 ]
 src = ["samples", "singer_sdk", "tests"]
@@ -267,7 +271,7 @@ target-version = "py37"
     "INP001", # flake8-no-pep420: implicit-namespace-package
 ]
 "noxfile.py" = ["ANN"]
-"tests/*" = ["ANN", "D1", "D2", "S101"]
+"tests/*" = ["ANN", "D1", "D2", "PLR2004", "S101"]
 # Disabled some checks in samples code
 "samples/*" = ["ANN", "D"]
 # Don't require docstrings conventions or type annotations in private modules
@@ -291,3 +295,6 @@ required-imports = ["from __future__ import annotations"]
 
 [tool.ruff.pydocstyle]
 convention = "google"
+
+[tool.ruff.pylint]
+max-args = 9
